# gcp-finops

./: .dockerignore  .gcp-finops.yaml.example  .gitignore  Dockerfile  LICENSE  Makefile  README.Docker.md  README.md  config.example.toml  config.example.yaml  docker-compose.override.yml.example  docker-compose.yml  mock_billing_test.csv  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  cloud_run_audit.py  forecast_example.py  generate_mock_billing_data.py  load_mock_data_to_bigquery.py
gcp_finops_dashboard/: __init__.py  api.py  cli.py  cloud_functions_auditor.py  cloud_run_auditor.py  cloud_sql_auditor.py  compute_auditor.py  cost_processor.py  dashboard_runner.py  forecast_service.py  gcp_client.py  helpers.py  llm_service.py  main.py  pdf_utils.py  setup_cli_structure.py  storage_auditor.py  types.py  visualizations.py
gcp_finops_dashboard/api/: __init__.py  config.py  main.py
gcp_finops_dashboard/api/routes/: __init__.py  ai.py  audits.py  config_routes.py  costs.py  dashboard.py  forecast.py  recommendations.py  reports.py
gcp_finops_dashboard/auditors/: __init__.py  cloud_functions_auditor.py  cloud_run_auditor.py  cloud_sql_auditor.py  compute_auditor.py  storage_auditor.py
gcp_finops_dashboard/cli/: __init__.py  main.py
gcp_finops_dashboard/cli/ai/: __init__.py  commands.py  service.py
gcp_finops_dashboard/cli/commands/: __init__.py  api.py  audit.py  base.py  dashboard.py  fonts.py  forecast.py  report.py  run.py  trend.py
gcp_finops_dashboard/cli/config/: __init__.py  manager.py  setup.py
gcp_finops_dashboard/reports/: gcp-finops-analysis.txt  gcp-finops-budget.txt  gcp-finops-explain-spike.txt  gcp-finops-summary.txt
gcp_finops_dashboard/services/: __init__.py
gcp_finops_dashboard/utils/: __init__.py
reports/: .gitignore
(+28 files in other folders)
